tests/NormalTests/paczka1/fuzzy1/27589464.err
Error in line 13: fiAHHsX S942 30,7
Error in line 21: GSWcJo S942 85,0
Error in line 12: mscYcPf S834 77,2
Error in line 30: S630 S910 37,9
Error in line 29: mscYcPf S630 80,5
